// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellDatetime should render date formatted 1`] = `
<div
  className="cell-datetime-container theme-cell-datetime-container"
>
  1970-01-18 14:49:21
</div>
`;

exports[`CellDatetime should render with "ago" 1`] = `
<div
  className="cell-datetime-container theme-cell-datetime-container"
>
  about 48 years ago
</div>
`;
